--- a/package.json
+++ b/package.json
@@ -17,23 +17,25 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.20",
-    "multer": "^1.4.2",
-    "twilio": "^3.66.0"
+    "multer": "^1.4.4",
+    "ts-node": "^10.9.1",
+    "twilio": "^3.84.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^8.5.4",
-    "@types/multer": "^1.4.7",
+    "@types/multer": "^1.4.8",
     "nodemon": "^2.0.22",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.0.5"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   }
 }
