--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.20",
     "multer": "^1.4.4",
+    "razorpay": "^2.9.2",
     "ts-node": "^10.9.1",
     "twilio": "^3.84.1"
   },
