--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.20",
     "multer": "^1.4.4",
+    "qrcode": "^1.5.3",
     "razorpay": "^2.9.2",
     "ts-node": "^10.9.1",
     "twilio": "^3.84.1"
